--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.2.0-canary.27",
     "next-auth": "5.0.0-beta.25",
     "postcss": "8.5.1",
+    "postgres": "^3.4.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "tailwindcss": "3.4.17",
@@ -23,9 +24,14 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.23.0"
   }
 }
